# nrf52-hal

./: .travis.yml  Cargo.toml
.cargo/: config
examples/spi-demo/: Cargo.toml  README.md
examples/spi-demo/src/: main.rs
nrf52-hal-common/src/: lib.rs  spi.rs  spim.rs
