[package]
name = "spi-demo"
version = "0.1.0"
authors = ["Fredrik Simonsson <simson@thesimson.net>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.10"
alloc-cortex-m = "0.3.5"
cortex-m = "0.5.8"
panic-halt = "0.2.0"
embedded-hal-spy = {path="/home/simson/work/baremetal2/embedded_hal_spy" } # features=["embedded_hal_digital_io_legacy_v1"] }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.nrf52832-hal]
version = "0.8.0"
path = "../../nrf52832-hal"
optional = true

[dependencies.nrf52832-pac]
version = "0.8.0"
optional = true

[features]
52832 = ["nrf52832-hal", "nrf52832-pac"]
default = ["52832"]
